@@ -29,6 +29,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #8200: logging: Handle errors when multiprocessing is not
+  fully loaded when logging occurs.
+
 - Issue #3890: Fix recv() and recv_into() on non-blocking SSL sockets.
 
 - Issue #8179: Fix macpath.realpath() on a non-existing path.
